crates/uitest/fixtures/ty_check/method_selection/ambiguous_trait_method.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/ambiguous_trait_method.fe
---
error[2-0016]: multiple trait candidates found
   ┌─ ambiguous_trait_method.fe:15:10
   │
15 │     Foo::foo()
   │          ^^^
   │          │
   │          `foo` is ambiguous
   │          candidate: `Trait2::foo`
   │          candidate: `Trait1::foo`
